[package]
name = "sessio"
version = "0.1.0"
edition = "2024"
description = "Cross-platform developer memory platform"
license = "MIT"
repository = "https://github.com/khalilpdev/sessio"
authors = ["khalilpdev"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
directories = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
